--- a/GreenCharger/src/app/admin/components/admin-layout/admin-layout.component.html
+++ b/GreenCharger/src/app/admin/components/admin-layout/admin-layout.component.html
@@ -1,7 +1,7 @@
 <div class="admin-layout">
   <div class="sidebar" [class.collapsed]="isCollapsed">
     <div class="logo">
-      <img src="assets/logo.png" alt="GreenCharger Logo" />
+      <img src="https://res.cloudinary.com/ddkvhnj27/image/upload/v1758400063/z7019344847597_aa447955326b74efcd30844f0ddafb97_mcbqgu.jpg" alt="GreenCharger Logo" />
       <span *ngIf="!isCollapsed">GreenCharger</span>
     </div>
     <nav class="menu">
